@@ -11,6 +11,7 @@
 #endif
 
 SEXP lmeRep_validate(SEXP x);
+SEXP lmeRep_crosstab(SEXP facs);
 SEXP lmeRep_create(SEXP facs, SEXP ncv);
 SEXP lmeRep_update_mm(SEXP x, SEXP facs, SEXP mmats);
 SEXP lmeRep_initial(SEXP x);
@@ -23,6 +24,6 @@ SEXP lmeRep_fixef(SEXP x);
 SEXP lmeRep_ranef(SEXP x);
 SEXP lmeRep_ECMEsteps(SEXP x, SEXP nsteps, SEXP REMLp, SEXP Verbp);
 SEXP lmeRep_gradient(SEXP x, SEXP REMLp, SEXP Uncp);
-
+SEXP lmeRep_variances(SEXP x);
 
 #endif
