@@ -1,3 +1,8 @@
+2004-10-04  Douglas Bates  <bates@bates1-home>
+
+	* src/init.c: Created R_init_Matrix and added registration of C
+	routines.
+
 2004-10-02  Douglas Bates  <bates@bates1-home>
 
 	* R/tripletMatrix.R: Force a require(lattice) for the image methods.
